--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(src/bounce)
 add_subdirectory(src/distort)
 add_subdirectory(src/gl_puzzle)
 add_subdirectory(src/demos)
+add_subdirectory(src/buttonfly)
