--- a/src/smooth/CMakeLists.txt
+++ b/src/smooth/CMakeLists.txt
@@ -1,7 +1,8 @@
 file (GLOB SC_SOURCE "*.c")
 file (GLOB SC_HEADER "*.h")
 
-add_executable(smooth ${SC_SOURCE} ${SC_HEADER})
+add_executable(smooth WIN32 ${SC_SOURCE} ${SC_HEADER})
+set_target_properties( smooth PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
 target_link_libraries(smooth OpenGL::GL GLUT::GLUT)
 target_include_directories(smooth PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
 target_compile_options(smooth PRIVATE ${OPENGL_CFLAGS} ${GLUT_CFLAGS})
