feat: add Linux support for OpenGL executables and improve CMake configurations

--- a/src/atlantis/CMakeLists.txt
+++ b/src/atlantis/CMakeLists.txt
@@ -1,9 +1,16 @@
 file (GLOB SC_SOURCE "*.c")
 file (GLOB SC_HEADER "*.h")
-
-add_executable(atlantis WIN32 ${SC_SOURCE} ${SC_HEADER})
-set_target_properties( atlantis PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
-target_link_libraries(atlantis OpenGL::GL GLUT::GLUT)
+if(WIN32)
+    add_executable(atlantis WIN32 ${SC_SOURCE} ${SC_HEADER})
+    set_target_properties( atlantis PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
+else()
+    add_executable(atlantis ${SC_SOURCE} ${SC_HEADER})
+endif()
+if (WIN32)
+    target_link_libraries(atlantis OpenGL::GL OpenGL::GLU GLUT::GLUT)
+else()
+    target_link_libraries(atlantis OpenGL::GL OpenGL::GLU GLUT::GLUT m)
+endif()
 target_include_directories(atlantis PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
 target_compile_options(atlantis PRIVATE ${OPENGL_CFLAGS} ${GLUT_CFLAGS})
 target_link_options(atlantis PRIVATE ${OPENGL_LDFLAGS} ${GLUT_LDFLAGS})
