--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,10 @@
     "peacock.color": "#4186c4",
     "files.associations": {
         "stdio.h": "c",
-        "gl.h": "c"
+        "gl.h": "c",
+        "glu.h": "c",
+        "assert.h": "c",
+        "windows.h": "c"
     },
     "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, UseTab: Never, IndentWidth: 4, TabWidth: 4, Break BeforeBraces: Attach, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 120, A ccessModifierOffset: -4, NamespaceIndentation: All, FixNamespaceComments: false }"
 }
