feat: add IRIS GL to OpenGL compatibility layer and additional functionality
- Introduced iris2ogl.h for mapping IRIS GL API to OpenGL/GLUT.
- Implemented missing functions in iris2ogl_missing.c for font scaling, color management, and matrix operations.
- Created irix_audio.h as a stub for audio functionality.
- Added irix_network.h for portable network functions with support for Windows and UNIX.
- Developed irix_windows.h for window management and integration with GLUT.
- Added thread support header irix_threads.h (currently empty).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,11 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 
+add_subdirectory(src/porting)
+
 add_subdirectory(src/libtk)
+add_subdirectory(src/libgobj)
+
 
 add_subdirectory(src/smooth)
 add_subdirectory(src/ideas)
