--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,7 +31,9 @@
         "gl.h": "c",
         "glu.h": "c",
         "assert.h": "c",
-        "windows.h": "c"
+        "windows.h": "c",
+        "iris2ogl.h": "c",
+        "stdlib.h": "c"
     },
     "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: LLVM, UseTab: Never, IndentWidth: 4, TabWidth: 4, Break BeforeBraces: Attach, AllowShortIfStatementsOnASingleLine: false, IndentCaseLabels: false, ColumnLimit: 120, A ccessModifierOffset: -4, NamespaceIndentation: All, FixNamespaceComments: false }"
 }
