--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(src/demos)
 add_subdirectory(src/buttonfly)
 add_subdirectory(src/insect)
 add_subdirectory(src/cycles)
+add_subdirectory(src/objviewer)
