Add support for light models and spaceball input in iris2ogl
- Introduced a new LightModelDef structure to manage light model properties.
- Implemented functions to set and bind light models, enhancing the lighting capabilities.
- Added spaceball state management with functions to retrieve translation and rotation values.
- Updated the getvaluator function to handle spaceball inputs, returning scaled values.
- Enhanced the getgdesc function to provide additional graphics descriptor information, including blend support and bit depth for color channels.
- Refactored the iris2ogl.c and iris2ogl.h files to accommodate these changes, ensuring compatibility with existing functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(src/porting)
 
 add_subdirectory(src/libtk)
 add_subdirectory(src/libgobj)
+add_subdirectory(src/libdemo)
 
 
 add_subdirectory(src/smooth)
@@ -24,3 +25,4 @@ add_subdirectory(src/buttonfly)
 add_subdirectory(src/insect)
 add_subdirectory(src/cycles)
 add_subdirectory(src/objviewer)
+add_subdirectory(src/flip)
