--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
     "cmake.buildBeforeRun": true,
     "cmake.parallelJobs": 8,
     "cmake.useCMakePresets": "always",
+    "cmake.debugConfig": {
+        "args": ["x29.bin"]
+    },
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#689fd0",
         "activityBar.background": "#689fd0",
