Refactor sound handling and time management for Windows compatibility
- Added Windows-specific implementation for sleep functionality in sound.c.
- Reorganized includes in sound.c for better clarity and structure.
- Improved readability and consistency in sound effect processing logic.
- Updated space.h to include math function macros for better cross-platform compatibility.
- Enhanced time management in watch.c with a custom gettimeofday function for Windows.
- Refactored timer functions to improve clarity and maintainability.
- Adjusted date formatting in reverse_julian_date for better output consistency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(src/insect)
 add_subdirectory(src/cycles)
 add_subdirectory(src/objviewer)
 add_subdirectory(src/flip)
+add_subdirectory(src/space)
