Refactor graphics handling and remove unused files
- Updated `actually_do_graphics` function to include a call to `draw_popup_menu` for rendering the popup menu when active.
- Deleted the unused `space` file from the `src/space` directory.
- Modified `space.h` to improve type definitions by including `<stdint.h>` and using fixed-width integer types.
- Cleaned up and organized various structures and definitions in `space.h` for better readability and consistency.
- Removed the `space.sh` script as it was no longer needed.
- Enhanced texture handling in `texture.c` by enabling 2D textures in the `spFlipTex` function before calling the display list.

--- a/src/space/CMakeLists.txt
+++ b/src/space/CMakeLists.txt
@@ -22,8 +22,8 @@ set(SPACE_SOURCE
 file (GLOB SPACE_HEADER "*.h")
 
 if(WIN32)
-    add_executable(space WIN32 ${SPACE_SOURCE} ${SPACE_HEADER})
-    set_target_properties( space PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
+    add_executable(space ${SPACE_SOURCE} ${SPACE_HEADER})
+    # set_target_properties( space PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
 else()
     add_executable(space ${SPACE_SOURCE} ${SPACE_HEADER})
 endif()
