Refactor and enhance texture handling and rendering
- Improved radar rendering by adjusting z-buffer settings for better message display.
- Refactored texture initialization and handling in tex.c, including error handling for texture file reading.
- Added CMake configuration for new iris executables (brick and heat).
- Implemented new texture rendering examples in src/iris/brick.c and src/iris/heat.c.
- Enhanced material handling in draw.c and light.c for better rendering performance.
- Added texture environment and scaling support in iris2ogl.c, including mipmap generation.
- Updated fog handling in iris2ogl.c to support various fog modes.
- Added missing texture constants and improved texture coordinate functions in iris2ogl.h.
- Ensured compatibility with OpenGL error checking during texture operations.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,8 @@ add_subdirectory(src/objviewer)
 add_subdirectory(src/flip)
 add_subdirectory(src/space)
 add_subdirectory(src/flight)
+add_subdirectory(src/iris)
 
-# Noms EXACTS des cibles exécutables (d'après ton log MSBuild)
 set(LEGACY_DEMOS
     atlantis
     bounce
