--- a/src/demos/CMakeLists.txt
+++ b/src/demos/CMakeLists.txt
@@ -8,6 +8,9 @@ set(SIMPLE_EXECUTABLES
     road
     plasma
     reflexion
+    voronoi
+    texture
+    rotate
 )
 
 foreach(target ${SIMPLE_EXECUTABLES})
