--- a/src/buttonfly/CMakeLists.txt
+++ b/src/buttonfly/CMakeLists.txt
@@ -2,8 +2,9 @@ file (GLOB SC_SOURCE "*.c")
 file (GLOB SC_HEADER "*.h")
 
 if(WIN32)
-    add_executable(buttonfly WIN32 ${SC_SOURCE} ${SC_HEADER})
-    set_target_properties( buttonfly PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
+    #add_executable(buttonfly WIN32 ${SC_SOURCE} ${SC_HEADER})
+    #set_target_properties( buttonfly PROPERTIES LINK_FLAGS "/ENTRY:\"mainCRTStartup\"" )
+    add_executable(buttonfly ${SC_SOURCE} ${SC_HEADER})
 else()
     add_executable(buttonfly ${SC_SOURCE} ${SC_HEADER})
 endif()
