--- a/src/demos/CMakeLists.txt
+++ b/src/demos/CMakeLists.txt
@@ -26,7 +26,7 @@ foreach(target ${SIMPLE_EXECUTABLES})
         if (WIN32)
             target_link_libraries(${target} OpenGL::GL OpenGL::GLU GLUT::GLUT)
         else()
-            target_link_libraries(${target} OpenGL::GL OpenGL::GLU GLUT::GLUT m)
+            target_link_libraries(${target} GLUT::GLUT OpenGL::GLU OpenGL::GL m)
         endif()
         target_include_directories(${target} PRIVATE ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
         target_compile_options(${target} PRIVATE ${OPENGL_CFLAGS} ${GLUT_CFLAGS})
